// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> matches snapshot 1`] = `
<Title
  name="alex"
  title="test"
>
  <TitleWrapper
    testId="test"
  >
    <div
      data-testid="test"
    >
      <b>
        test
      </b>
      <span>
        alex
      </span>
    </div>
  </TitleWrapper>
</Title>
`;

exports[`<Title /> matches snapshot 2`] = `
<div>
  <div
    data-testid="test"
  >
    <b>
      test
    </b>
    <span>
      alex
    </span>
  </div>
</div>
`;
